Fixed issue with constant dark mode. New issue is that it doesn't switch to dark ever

--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -2,7 +2,7 @@
 // http://ionicframework.com/docs/theming/
 
 /** Ionic CSS Variables **/
-@media (prefers-color-scheme: light) {
+// @media (prefers-color-scheme: light) {
   :root {
     /** primary **/
     --ion-color-primary: #2dd36f;
@@ -76,15 +76,15 @@
     --ion-color-light-shade: #d7d8da;
     --ion-color-light-tint: #f5f6f9;
   }
-}
+// }
 
-@media (prefers-color-scheme: dark) {
+// @media (prefers-color-scheme: dark) {
   /*
    * Dark Colors
    * -------------------------------------------
    */
 
-  body {
+  body.dark {
     --ion-color-primary: #2fdf75;
     --ion-color-primary-rgb: 47, 223, 117;
     --ion-color-primary-contrast: #000000;
@@ -154,7 +154,7 @@
    * -------------------------------------------
    */
 
-  .ios body {
+  .ios body.dark {
     --ion-background-color: #000000;
     --ion-background-color-rgb: 0,0,0;
 
@@ -198,7 +198,7 @@
    * -------------------------------------------
    */
 
-  .md body {
+  .md body.dark {
     --ion-background-color: #121212;
     --ion-background-color-rgb: 18,18,18;
 
@@ -235,4 +235,4 @@
 
     --ion-card-background: #1e1e1e;
   }
-}
+// }
